Ejecución de servidor mejorado, creación de propiedades del servidor y mejora en el manjeo de la utilidad Config